<resources>
    <string name="app_name">Ad340-Projects</string>
    <string name="editTextTextPersonName">Enter Name</string>
    <string name="buttonInfo">Login</string>
    <string name="buttonCities">Traffic Camera Map</string>
    <string name="buttonMovies">Movies</string>
    <string name="buttonParks">Parks</string>
    <string name="buttonTraffic">Traffic</string>
    <string name="textViewInfo">I\'m Jafar Eslamikhah, like to be called Cyrus. Love hiking, biking, montainering and advantures.
        Currently student at North Seattle College, pursuing BAS AP development.</string>
    <string name="imageView">Cyrus In Wenatchee</string>
    <string name="textViewt">Movie Details</string>
    <string name="textview3">Title</string>
    <string name="textview4">Year</string>
    <string name="textview5">Director</string>
    <string name="textview6">Description</string>
    <string name="textview1">Title</string>
    <string name="textview2">Year</string>
    <string name="label">List</string>
    <string name="textviewindex">1</string>

    <!--Login -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="auth_success">Login successful</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[Cancel]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="logo_w_h">Login</string>
    <string name="wrap_content">Seattle Traffic Camaras</string>
    <string name="btnParse">Parse JSON</string>
    <item name="login" format="integer" type="integer">100</item>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

</resources>