<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:layout_marginTop="4dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="160dp"
            android:layout_height="41dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/editTextTextPersonName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/buttonInfo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonInfo"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/buttonInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCities"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/buttonCities"
            app:layout_constraintEnd_toStartOf="@+id/buttonMovies"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <Button
            android:id="@+id/buttonMovies"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/buttonMovies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonInfo" />

        <Button
            android:id="@+id/buttonParks"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/buttonParks"
            app:layout_constraintEnd_toStartOf="@+id/buttonTraffic"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCities" />

        <Button
            android:id="@+id/buttonTraffic"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/buttonTraffic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMovies" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="4dp"
        android:autofillHints="NA"
        android:background="#E5E6E8"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:freezesText="true"
        android:inputType="textLongMessage|textAutoCorrect|textMultiLine"
        android:paddingStart="2px"
        android:paddingLeft="5px"
        android:paddingRight="5px"
        android:text="@string/textViewInfo"
        android:textAlignment="viewStart"
        android:textColor="#2C0202"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:contentDescription="@string/imageView"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="horizontal|vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo"
        app:srcCompat="@mipmap/me131116478" />

</androidx.constraintlayout.widget.ConstraintLayout>